[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
dependencies = [
    "docutils",
    "bitarray",
    "bump2version",
    "click",
    "datasets[apache-beam]",
    "faiss-cpu",
    "faiss-gpu",
    "gitpython",
    "ipykernel",
    "ipywidgets",
    "jsonlines",
    "ninja",
    "nltk",
    "packaging",
    "pandas",
    "psutil",
    "pyserini",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-rerunfailures",
    "scikit-learn",
    "signals",
    "spacy",
    "stanza",
    "torch",
    "tox",
    "transformers",
    "sentencepiece",
    "ujson",
    "tqdm",
    "frozendict",
    "nlp",
    "protobuf",
    "tabulate",
    "rouge_score",
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx_design",
    "recommonmark",
    "grpcio",
    "grpcio-tools",
    "fastapi",
    "uvicorn",
    "cachetools",
    "sqlitedict"
]
